--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="find">Find a course for you</string>
     <string name="improve">Improve your skills</string>
     <string name="subtitle">Quarantine is the perfect time to spend your day learning something new, from anywhere!</string>
+    <string name="next">next</string>
+    <string name="content_image">content image</string>
+    <string name="navigation_image">navigation image</string>
+    <string name="start">Let\'s start</string>
 </resources>
