--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">WordsFactory</string>
+    <string name="no_word">No word</string>
+    <string name="input_something_to_find_it_in_dictionary">Input something to find it in dictionary</string>
 </resources>
