--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,8 @@
     <string name="no_word">No word</string>
     <string name="input_something_to_find_it_in_dictionary">Input something to find it in dictionary</string>
     <string name="example">Example:</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="part_of_speech">Part of speech</string>
-    <string name="meanings">Meanings</string>
+    <string name="part_of_speech">Part of speech:</string>
+    <string name="meanings">Meanings:</string>
     <string name="add_to_dictionary">Add to Dictionary</string>
 </resources>
