--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,11 @@
     <string name="name">Name</string>
     <string name="e_mail">E-mail</string>
     <string name="password">Password</string>
-    <string name="error_message">Возникла проблема при получении данных</string>
+    <string name="problem_with_get_data_error">Возникла проблема при получении данных</string>
     <string name="ok">ок</string>
     <string name="activity_null">"Activity cannot be null</string>
     <string name="success">Success</string>
     <string name="todo_next_activity">Тут будет переход дальше</string>
     <string name="enter_data_error">Некоректные данные</string>
+    <string name="other_error">Что-то пошло не так</string>
 </resources>
