--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="start">Let\'s start</string>
     <string name="skip">Skip</string>
     <string name="error_message">Возникла проблема при получении данных</string>
+    <string name="wordsfactory">WordsFactory</string>
 </resources>
