--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="start2">Start</string>
     <string name="there_are">There are</string>
     <string name="count_words_end">words \nin your Dictionary.\n\nStart the Training?</string>
+    <string name="add_word_in_dictionary">Добавьте слова в словарь</string>
 </resources>
