update code for review

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="count_words_end">words \nin your Dictionary.\n\nStart the Training?</string>
     <string name="add_word_in_dictionary">Добавьте слова в словарь</string>
     <string name="go">GO!</string>
+    <string name="go_next_activity">Тут будет переход дальше!</string>
 </resources>
