--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="a">A.</string>
     <string name="b">B.</string>
     <string name="c">C.</string>
+    <string name="of">of</string>
 </resources>
