work with widget, refactoring, testing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="widgetTitle">WordsFactory</string>
     <string name="my_dictionary">My dictionary</string>
     <string name="i_already_remember">I already remember</string>
+    <string name="words">words</string>
 </resources>
